# msm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.jam  index.html  playground.cpp
.drone/: drone.sh
.github/workflows/: ci.yml
bench/: Back.cpp  Back11.cpp  Back11LargeMachine10.cpp  Back11LargeMachine20.cpp  BackFavorCompileTime.cpp  BackMp11CompositeMachine.cpp  BackMp11LargeMachine10.cpp  BackMp11LargeMachine15.cpp  BackNestedFsm.cpp  BackNestedFsmFavorCompileTime.cpp  Backmp11.cpp  Backmp11FavorCompileTime.cpp  Backmp11NestedFsm.cpp  Backmp11NestedFsmFavorCompileTime.cpp  CMakeLists.txt  LargeMachine10.cpp  LargeMachine10OptCompileTime.cpp  LargeMachine15.cpp  LargeMachine20.cpp  README.md  common.hpp  nested_fsm.hpp
bench/backmp11_nested_fsm_multi_cu/: fsm0.cpp  fsm1.cpp  fsm2.cpp  test.cpp
cmp/: chained_rows_1_mpl.cpp  chained_rows_2_mp11.cpp  chained_rows_2_mp11_normal_fold.cpp  map_of_row_seq_1_mpl.cpp  map_of_row_seq_2_mp11.cpp  map_of_row_seq_2_mp11_normal_fold.cpp
doc/: local-playbook.yml  package-lock.json  package.json
doc/HTML/: ch03.html  ch03s04.html  ch03s05.html  ch03s06.html  ch04.html  ch04s02.html  ch04s03.html  ch04s04.html  ch04s05.html  ch05.html  ch06.html  ch06s02.html  ch06s03.html  ch06s04.html  ch07.html  ch07s02.html  ch08.html  ch08s02.html  ch08s03.html  ch08s04.html  ch08s05.html  ch08s06.html  ch08s07.html  ch08s08.html  ch08s09.html  ch08s10.html  ch08s11.html  ch08s12.html  ch08s13.html  ch09.html  ch10.html  ch11.html  index.html  pt01.html  pt02.html  re01.html  re02.html  re03.html
doc/asciidoc/: msm.adoc
doc/md/: msm.md
doc/modules/ROOT/pages/: tutorial.adoc  version-history.adoc
doc/modules/ROOT/pages/reference/: back-end-headers.adoc
doc/modules/ROOT/pages/tutorial/: back-end.adoc  backmp11-back-end.adoc  basic-front-end.adoc  euml-front-end.adoc  functor-front-end.adoc
doc/modules/ROOT/partials/: toc.adoc
doc/src/: msm.xml
example/: CMakeLists.txt  SimplePhoenix.cpp  lambda.cpp
example/mpl_graph/: Jamfile.v2
example/serializer/: BoostJson.cpp  BoostSerialization.cpp  CMakeLists.txt  DimSwitch.hpp  NlohmannJson.cpp
include/boost/msm/: kleene_event.hpp
include/boost/msm/back/: dispatch_table.hpp  state_machine.hpp
include/boost/msm/back11/: dispatch_table.hpp  state_machine.hpp
include/boost/msm/backmp11/: README.md  common_types.hpp  context.hpp  dispatch_table.hpp  event_traits.hpp  favor_compile_time copy.hpp  favor_compile_time.hpp  history_impl.hpp  history_policies.hpp  metafunctions.hpp  state_machine.hpp  state_machine_config.hpp
include/boost/msm/backmp11/detail/: basic_polymorphic.hpp  basic_polymorphic_value.hpp  dispatch_table.hpp  favor_runtime_speed.hpp  history_impl.hpp  metafunctions.hpp  state_machine_base.hpp  state_visitor.hpp  transition_table.hpp
include/boost/msm/backmp11/tmp/: favor_compile_time_new_dispatch_table.hpp
include/boost/msm/front/: common_states.hpp  functor_row.hpp  state_machine_def.hpp  states.hpp
include/boost/msm/front/detail/: common_states.hpp
include/boost/msm/front/euml/: common.hpp  state_grammar.hpp  stt_grammar.hpp  transformation.hpp
include/boost/msm/front/puml/: puml.hpp
include/boost/msm/lpp/: basic_grammar.hpp  common_types.hpp  function.hpp  lpp.hpp  operator.hpp  tags.hpp
test/: Anonymous.cpp  AnonymousAndGuard.cpp  AnonymousEuml.cpp  Back11Anonymous.cpp  Back11BigWithFunctors.cpp  Back11CompositeMachine.cpp  Back11Entries.cpp  Back11OnlyStringPuml.cpp  Back11OrthogonalDeferred3.cpp  Back11OrthogonalDeferred3WithPuml.cpp  Back11SimpleInternalEuml.cpp  Back11SimpleInternalFunctors.cpp  Back11SimpleInternalWithPuml.cpp  Back11SimpleMachine.cpp  Back11SimpleWithFunctors.cpp  Back11SimpleWithPuml.cpp  Back11TestDeferIn2Regions.cpp  BackCommon.hpp  Backmp11.hpp  Backmp11Adapter.hpp  Backmp11BasicPolymorphic.cpp  Backmp11BasicPolymorphicValue.cpp  Backmp11Constructor.cpp  Backmp11Context.cpp  Backmp11CopyMove.cpp  Backmp11Deferred.cpp  Backmp11EntryExit.cpp  Backmp11History.cpp  Backmp11ManyDeferTransitions.cpp  Backmp11Members.cpp  Backmp11RootSm.cpp  Backmp11TestConstructor.cpp  Backmp11Transitions.cpp  Backmp11UpperFsm.cpp  Backmp11Visitor.cpp  BigWithFunctors.cpp  CMakeLists.txt  CompositeEuml.cpp  CompositeMachine.cpp  Constructor.cpp  (+38 more)
test_backmp11/: Anonymous.cpp  AnonymousEuml.cpp  BigWithFunctors.cpp  CMakeLists.txt  CompositeEuml.cpp  CompositeMachine.cpp  Constructor.cpp  Entries.cpp  EventQueue.cpp  History.cpp  KleeneDeferred.cpp  ManyDeferTransitions.cpp  OrthogonalDeferred.cpp  OrthogonalDeferred2.cpp  OrthogonalDeferred3.cpp  OrthogonalDeferredEuml.cpp  Serialize.cpp  SerializeSimpleEuml.cpp  SerializeWithHistory.cpp  SimpleEuml.cpp  SimpleEuml2.cpp  SimpleInternal.cpp  SimpleInternalEuml.cpp  SimpleInternalFunctors.cpp  SimpleMachine.cpp  SimpleWithFunctors.cpp  Test2RegionsAnonymous.cpp  TestConstructor.cpp  TestConstructorMovableOnlyTypes.cpp  TestDeferAndMessageQueue.cpp  TestDeferAndMessageQueue2.cpp  TestDeferAndMessageQueue3.cpp  TestDeferIn2Regions.cpp
